# openpenpal-new

./: .env.docker.example  .env.example  .env.prisma.example  .env.template  .eslintrc.js  .gitignore  .golangci-simple.yml  .last_backup  .prettierrc.js  AI_SERVICE_IMPROVEMENT_PLAN.md  AI_SYSTEM_CONFIGURATION_GUIDE.md  ARCHITECTURAL_COHERENCE_REPORT.md  CLAUDE.md  CONTRIBUTING.md  CSP_COMPREHENSIVE_ANALYSIS_REPORT.md  CSP_FIX_SUMMARY.md  DATABASE_CONFIGURATION_ANALYSIS_REPORT.md  DOCS.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_SYSTEM_CHECK_REPORT.md  FINAL_DOCUMENTATION_CLEANUP_REPORT.md  FINAL_PROJECT_STATUS_2025-08-18.md  FRONTEND_SYSTEMATIC_AUDIT_REPORT.md  MERGE_EXECUTION_REPORT.md  MUSEUM-DEVELOPMENT-PLAN.md  MUSEUM-IMPLEMENTATION-STATUS.md  MUSEUM-STATUS-REPORT.md  Makefile  PERMISSION_SYSTEM_DATABASE_FIX.md  POSTGRESQL_MIGRATION_DEEP_ANALYSIS_REPORT.md  PROJECT_ANALYSIS_REPORT.md  PROJECT_STATUS_2025-08-17.md  PROJECT_STATUS_DASHBOARD.yml  README.md  REALTIME_COMMUNICATION_ANALYSIS.md  REFINED_DEVELOPMENT_PLAN.md  ROLE_SYSTEM_ALIGNMENT_REPORT.md  ROLE_SYSTEM_CONSISTENCY_CHECK.md  ROLE_SYSTEM_UPDATE_FINAL_REPORT.md  TESTING_GUIDE.md  (+103 more)
.github/: PULL_REQUEST_TEMPLATE.md  README.md
PRD-NEW/: AI子系统技术设计文档.md  AI系统前后端交互检查报告.md  CROSS_SYSTEM_INTERACTION_REPORT_2025.md  DEVELOPMENT_IMPLEMENTATION_SUMMARY.md  DEVELOPMENT_PLAN.md  OpenPenPal 产品需求文档（PRD V1.0）.md  OpenPenPal 系统总体架构与模块关系图.md
agent-tasks/: HEALTH_CHECK_FIXES.md  HEALTH_CHECK_REPORT.md  README.md
api/: index.go
backend/: .env.development  .env.example  .env.production  .env.security.example  .golangci.yml  AI_SYSTEM_COMPREHENSIVE_ANALYSIS_REPORT.md  API_REFACTORING_PLAN.md  CONSISTENCY_ANALYSIS_REPORT.md  CONSISTENCY_FIX_SUMMARY.md  Dockerfile  E2E_TEST_REPORT_SOTA.md  FINAL_E2E_TEST_SUMMARY.md  PERMISSION_CONSISTENCY_REPORT.md  REPAIR_SUMMARY_2025-08-17.md  SECURITY.md  SOTA_E2E_FINAL_REPORT.md  SOTA_IMPLEMENTATION_SUMMARY.md  ai-moonshot-test-report.json  alice_login.json  api-consistency-test-report.json  check-ai-config.sql  check-user-password-fixed.sql  check-user-password.sql  consistency-check.js  consistency-report.json  cookie.txt  cookie_1.txt  cookie_test.txt  cookies.txt  debug-jwt-mismatch.js  deep-consistency-check.js  deep-consistency-report.json  e2e-consistency-report.json  e2e-sota-report.json  e2e-validation-report.md  fix-model-sync.js  frontend-api-test.js  generate_hash.go  go.mod  go.sum  (+39 more)
code-review-reports/: API_DESIGN_CONSISTENCY_REPORT.md  COMPLETE_CODE_REVIEW_REPORT.md  PERFORMANCE_ANALYSIS_REPORT.md  README.md  SECURITY_AUDIT_REPORT_2025.md
config/: .golangci.yml  alert_rules.yml  codecov.yml  config.default.json  config.schema.json  index.js  log-monitoring.yml  logging.conf  logrotate.conf  nginx.prod.conf  prometheus.yml
configs/: smart-logger-prod.json
deploy/: README.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.production.yml
docs/: API_INTEGRATION_STATUS.md  AUDIT_STORAGE_ENHANCEMENT.md  CONCURRENCY_CONTROL.md  DOCUMENTATION_CLEANUP_PLAN.md  FRONTEND_LOGIN_FIX.md  LOG_EXPLOSION_FIX_REPORT.md  MISSING_MODELS_IMPLEMENTATION.md  README.md  TESTING_GUIDE.md  TESTING_QUICK_START.md  log-system-migration.md
docs-backup/: ocr-integration-plan.md  user-guide-complete.md  user-journey-implementation-status.md
experimental/: README.md
frontend/: .env.example  .env.local.clean  .env.production  .eslintrc-circular-deps.js  .eslintrc.js  API_MIGRATION_GUIDE.md  ARCHITECTURAL_COHERENCE_REPORT.md  BACKEND_API_DATABASE_STATUS_REPORT.md  CHUNK_LOADING_FIX_REPORT.md  CIRCULAR-DEPENDENCY-FIXES.md  COMPLETE_404_ANALYSIS.md  CONSOLE_ERROR_FIX.md  COURIER_LEVELS_INTEGRATION_REPORT.md  COURIER_MANAGEMENT_VERIFICATION_REPORT.md  DEVELOPMENT_COMPLETION_SUMMARY.md  Dockerfile  ERROR_ANALYSIS_FINAL.md  FIX_EXECUTION_REPORT.md  HYDRATION-FIX.md  INTEGRATION_TEST_REPORT.md  MUSEUM-EXHIBITION-FIX.md  MUSEUM-PRD-CHECK.md  ROUTE_REFACTORING_COMPLETION_REPORT.md  cookies.txt  (+35 more)
(+1847 files in other folders)
